completed cat-button page; added (blank) about page; added matterjs + template demo code on double_pendulum.ejs; moved script imports and title bar to partial

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,13 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%- include("_globalScripts"); %>
-    <title>AE - Home</title>
+    <title>AE - About</title>
 </head>
 <body>
 
 <%- include("_titlebar"); %>
-
-index page things here
-
-</body>
-</html>
